# judas

./: .gitignore  LICENSE  README.fr.md  README.md  conftest.py  package-lock.json  package.json  pyproject.toml  run.bat  setup.bat
app/: index.html  package-lock.json  package.json  vite.config.js
docs/: GUIDE.md
mod/: README.md  build.gradle  settings.gradle
scripts/: app.bat  arm_combo_god_field.bat  arm_combo_god_field.ps1  build_mod.bat  build_mod.ps1  check_aim_os.bat  check_aim_os.ps1  check_arena_combo.bat  check_arena_combo.ps1  check_field_preflight.bat  check_field_preflight.ps1  check_field_status.bat  check_field_status.ps1  check_live_actions.bat  check_live_actions.ps1  check_live_ws.bat  check_live_ws.ps1  check_mod_deploy.bat  check_mod_deploy.ps1  check_native_aim_sim.bat  check_native_aim_sim.ps1  check_packet_order.bat  check_packet_order.ps1  check_safe_export.bat  check_safe_export.ps1  control_judas_mod.bat  control_judas_mod.ps1  daemon.bat  env.bat  field_test_aim_os.bat  field_test_aim_os.ps1  field_test_aim_os_quick.bat  judas_live.bat  judas_live.ps1  prepare_aim_os_test.bat  prepare_packet_order_test.bat  prove_combo_god.bat  prove_combo_god.ps1  start_combo_god.bat  start_combo_god.ps1  (+22 more)
serve/: __init__.py  arena.py  daemon.py  live.py  protocol.py  training_manager.py
sim/: __init__.py  bench.py  config.py  judas_sim.py  obs.py  ref_backend.py  verify.py
sim_ref/: __init__.py  collision.py  combat.py  config.py  constants.py  match.py  physics.py  player.py
tests/: helpers.py  test_aim_os_log_analyzer.py  test_arena.py  (+29 more)
(+72 files in other folders)
